--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1, h2, h3, div {
 
 
 /* Add some responsiveness */
-@media only screen and (max-width: 599px) {
+@media (max-width: 599px) {
     body{
       padding: 0px;
     }
@@ -77,14 +77,14 @@ h1, h2, h3, div {
 }
 }
 
-@media only screen and (min-width: 600px) {
+@media (min-width: 600px) {
     /* For tablets: */
     #board {
       width: 64vw;
       height: 64vw;
     }
 }
-@media only screen and (min-width: 768px) {
+@media (min-width: 768px) {
     /* For desktop: */
     #board {
       width: 42vw;
