--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 10px;
+  padding: 0px;
   font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 }
 
@@ -65,26 +65,22 @@ h1, h2, h3, div {
 
 
 
-/* Add some responsiveness */
-@media (max-width: 599px) {
-    body{
-      padding: 0px;
-    }
-    #board {
-      width: 95vw;
-      height: 95vw;
-    }
-}
-}
+/* Responsiveness */
 
 @media (min-width: 600px) {
     /* For tablets: */
+    body{
+      padding: 5px;
+    }
     #board {
       width: 64vw;
       height: 64vw;
     }
 }
 @media (min-width: 768px) {
+    body {
+      padding: 10px;
+    }
     /* For desktop: */
     #board {
       width: 42vw;
