--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1, h2, h3, div {
   margin: 0 auto;
   width: 95vw;
   height: 95vw;
+  background-color:red;
 }
 
 #board table{
@@ -75,6 +76,7 @@ h1, h2, h3, div {
     #board {
       width: 64vw;
       height: 64vw;
+      background-color:blue;
     }
 }
 @media (min-width: 768px) {
@@ -85,5 +87,6 @@ h1, h2, h3, div {
     #board {
       width: 42vw;
       height: 42vw;
+      background-color:violet;
     }
 }
