--- a/style.css
+++ b/style.css
@@ -94,14 +94,6 @@ h1, h2, h3, div {
 
 html { background: yellow; }
 
-@media (min-width: 300px) {
-  html { background: blue; }
-}
-
-@media (min-width: 400px) {
-  html { background: green; }
-}
-
-@media (min-width: 600px) {
-  html { background: red; }
+@media all and (min-width: 50em){
+  background-color:red;
 }
