--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ h1, h2, h3, div {
 /* Board */
 #board{
   margin: 0 auto;
-  width: 90vw;
-  height: 90vw;
+  width: 95vw;
+  height: 95vw;
 }
 
 #board table{
@@ -65,35 +65,25 @@ h1, h2, h3, div {
 
 
 
-/* Responsiveness */
+/* Add some responsiveness */
 
-
-/*@media (min-width: 600px) {
-     For tablets: 
+@media (min-width: 600px) {
+    /* For tablets: */
     body{
       padding: 5px;
     }
     #board {
       width: 64vw;
       height: 64vw;
-      background-color:blue;
     }
 }
 @media (min-width: 768px) {
     body {
       padding: 10px;
     }
-     For desktop: 
+    /* For desktop: */
     #board {
       width: 42vw;
       height: 42vw;
-      background-color:violet;
     }
-}*/
-
-
-html { background: yellow; }
-
-@media all and (min-width: 50em){
-  background-color:red;
 }
